build/k8s/wsprnet-ingress/80-wsrpnet-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wsprnet-ingress-service
  namespace: wsprnet-rabbitmq
spec:
  selector:
    app: wsprnet
  ports:
    - port: 80
      targetPort: 5000
  type: LoadBalancer
