build/k8s/wsprnet-ingress/100-wsprnet-ingress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wsprnet-ingress-ingress
  namespace: wsprnet-rabbitmq
spec:
  rules:
    - http:
        paths:
          - path: /post
            pathType: Prefix
            backend:
              service:
                name: wsprnet-ingress-service
                port:
                  number: 80
